--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galam Library Managemsent</title>
+    <script>
+        var user_organizations = {{ Organizations | safe }};
+    </script>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <script src="{{ url_for('static', filename='js/html_5_QR_scanner.js') }}"></script>
