--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full w-full">
+<html lang="en" class="h-full w-full ">
 
 <head>
     <meta charset="UTF-8">
@@ -27,7 +27,8 @@
                         Management</span>
                 </div>
                 <div class="flex items-center">
-                    <input class="rounded-full px-4 py-2 border-2 border-gray-300 text-lg w-32 md:w-64 lg:w-96"
+                    <input
+                        class="rounded-full px-4 py-2 border-2 border-gray-300 text-lg w-32 md:w-64 lg:w-96 dark:bg-black dark:text-white"
                         type="search" placeholder="Search" id="search_bar">
                     <div class="ml-4 flex items-center space-x-4">
                         <img class="h-6 w-6 cursor-pointer"
@@ -48,7 +49,8 @@
     <div class="w-full h-full  pt-16 md:flex md:flex-row md:justify-between">
 
         <div class="h-full w-3/12 shadow-lg border-r-2 border-gray-500 " id="filter_col">
-            <div id="" class="w-full p-2 text-xl font-semibold text-center border-b-2 border-gray-200 shadow-lg">
+            <div id=""
+                class="w-full p-2 text-xl font-semibold text-center border-b-2 border-gray-200 shadow-lg dark:text-violet-500">
                 <span>Filters Books</span>
             </div>
 
