--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -31,15 +31,15 @@
                         class="rounded-full px-4 py-2 border-2 border-gray-300 text-lg w-32 md:w-64 lg:w-96 dark:bg-black dark:text-white"
                         type="search" placeholder="Search" id="search_bar">
                     <div class="ml-4 flex items-center space-x-4">
-                        <img class="h-6 w-6 cursor-pointer"
+                        <img class="h-6 w-6 cursor-pointer hover:bg-gray-300"
                             src="https://img.icons8.com/ios-glyphs/30/000000/add-book.png" id="register_new_book"
                             alt="Add New Book">
-                        <img class="h-6 w-6" src="https://img.icons8.com/ios-glyphs/30/000000/user-male-circle.png"
-                            alt="User">
-                        <img class="h-6 w-6" src="https://img.icons8.com/ios-glyphs/30/000000/statistics.png"
-                            alt="Statistics">
-                        <img class="h-6 w-6" src="https://img.icons8.com/ios-glyphs/30/000000/settings.png"
-                            alt="Settings">
+                        <img id="user_management" class="h-6 w-6 cursor-pointer hover:bg-gray-300"
+                            src="https://img.icons8.com/ios-glyphs/30/000000/user-male-circle.png" alt="User">
+                        <img class="h-6 w-6 hover:bg-gray-300"
+                            src="https://img.icons8.com/ios-glyphs/30/000000/statistics.png" alt="Statistics">
+                        <img class="h-6 w-6 hover:bg-gray-300"
+                            src="https://img.icons8.com/ios-glyphs/30/000000/settings.png" alt="Settings">
                     </div>
                 </div>
             </div>
