--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galam Library Managemsent</title>
+    <title>GT Library</title>
     <script>
         var user_organizations = {{ Organizations | safe }};
     </script>
@@ -21,10 +21,11 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
-                    <img class="h-8 w-8" src="https://tailwindui.com/img/logos/workflow-mark-indigo-500.svg"
-                        alt="Workflow">
-                    <span class="ml-2 text-lg font-semibold text-gray-900 dark:text-white hidden sm:block">Galam Library
-                        Management</span>
+                    <!-- <img class="h-8 w-8" src="https://tailwindui.com/img/logos/workflow-mark-indigo-500.svg"
+                        alt="Workflow"> -->
+                    <img class="h-10 w-10" src="/static/images/b4.png" alt="Library">
+                    <span class="ml-2 text-lg font-semibold text-gray-900 dark:text-white hidden sm:block">GTLibrary
+                        Management System</span>
                 </div>
                 <div class="flex items-center">
                     <input
@@ -106,8 +107,6 @@
                             id="statistics_total_penality_due_to_late_return">0</span></span>
                     <span class="mr-2 pr-2 border-r-0 border-gray-200">Amount Paid till now: <span
                             id="statistics_total_amount_paid_by_users">0</span></span>
-
-
                 </div>
 
                 <div class="w-full p-2 h-full overflow-y-auto shadow-lg flex flex-col" id="books_box">
